--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "dev": "node ./bin/www"
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
